# doc-retrieval

./: .gitignore  README.md  pyproject.toml
src/doc_retrieval/: __init__.py  __main__.py  cli.py  config.py  interactive.py  orchestrator.py
src/doc_retrieval/converter/: __init__.py  llm_formatter.py  markdown.py
src/doc_retrieval/discovery/: __init__.py  base.py  crawler.py  manual.py  sitemap.py
src/doc_retrieval/extractor/: __init__.py  api_schema.py  main_content.py
src/doc_retrieval/fetcher/: __init__.py  base.py  http_fetcher.py  playwright_fetcher.py
src/doc_retrieval/output/: __init__.py  multi_file.py  single_file.py
src/doc_retrieval/patterns/: __init__.py  registry.py
src/doc_retrieval/utils/: __init__.py  rate_limiter.py  url_utils.py
