[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-retrieval"
version = "0.1.0"
description = "Extract documentation from websites as LLM-ready Markdown"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Ian" }
]
keywords = ["documentation", "scraper", "markdown", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",

    # Web fetching
    "playwright>=1.40.0",
    "httpx>=0.27.0",

    # Content extraction
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "trafilatura>=1.12.0",
    "readability-lxml>=0.8.0",

    # Sitemap parsing
    "ultimate-sitemap-parser>=0.5.0",
    "defusedxml>=0.7.0",

    # HTML to Markdown
    "markdownify>=0.12.0",

    # Configuration
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tomli>=2.0.0; python_version < '3.11'",

    # Utilities
    "tenacity>=8.2.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
]

[project.scripts]
doc-retrieval = "doc_retrieval.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_retrieval"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
